SeaStar prototype